force-app/main/default/objects/X7S_Adventure_Step__c/X7S_Adventure_Step__c.object-meta.xml
<CustomObject>
    <description>Object to support Learning Adventure Step records as part of the Learning Adventure accelerator from 7Summits.</description>
    <label>7S Adventure Step</label>
    <nameField>
        <label>7S Adventure Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Adventure Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>