force-app/main/default/objects/X7S_Adventure_Step__c/fields/Adventure__c.field-meta.xml
<CustomField>
    <fullName>Adventure__c</fullName>
    <description>The Adventure that the Adventure Step belongs to</description>
    <inlineHelpText>This is the Adventure this Adventure Step belongs to</inlineHelpText>
    <label>Adventure</label>
    <referenceTo>X7S_Adventure__c</referenceTo>
    <relationshipName>X7S_Adventure_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>