force-app/main/default/objects/X7S_Adventure_Step__c/fields/Number_of_Completed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Tasks__c</fullName>
    <label>Number of Completed Tasks</label>
    <summarizedField>X7S_Adventure_Module__c.Number_of_Completed_Tasks__c</summarizedField>
    <summaryForeignKey>X7S_Adventure_Module__c.Adventure_Step__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>