force-app/main/default/objects/X7S_Adventure_Step__c/fields/Source_Step_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Step_ID__c</fullName>
    <description>Record ID of the step that was originally cloned as the source for this Adventure Step.</description>
    <label>Source Step ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>