force-app/main/default/objects/X7S_Adventure_Step__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <description>Subtitle of the Adventure Step which will be displayed in the header</description>
    <inlineHelpText>This is the subtitle of the Adventure Step which will be displayed in the header</inlineHelpText>
    <label>Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>